force-app/main/default/objects/Log_Event__e/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Execution Context</description>
    <label>Context</label>
    <length>100</length>
    <type>Text</type>
</CustomField>