force-app/main/default/objects/Log_Event__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>Id of the user triggering the operation</description>
    <label>User Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>